잘못 작성된 부분 수정 및 빠진 부분 추가